# llm-consulting-system

./: .gitignore  Makefile  README.md  run_all.sh  setup.sh  stop_all.sh
auth_service/: .env.example  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: deps.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: test_integration.py  test_security.py
bot_service/: .env.example  pyproject.toml  run_bot.py
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
